# MathEditorByQt

./: .gitignore  ARCHITECTURE_DESIGN.md  CMakeLists.txt  DESIGN.md  GraphicsTextItem.cpp  GraphicsTextItem.h  README.md  STYLE_MANAGER_DESIGN.md  TextInputWidget.cpp  TextInputWidget.h  main.cpp  步骤  步骤.txt
include/controller/: DocumentController.h  InputController.h  SelectionController.h
include/core/: CharacterFormat.h  Document.h  Format.h  MathObject.h  Paragraph.h  ParagraphFormat.h  PropertyState.h  Run.h  Selection.h  Style.h  StyleManager.h  TextRun.h
include/io/: DocumentReader.h  DocumentWriter.h
include/util/: ParagraphUtils.h  PositionUtils.h
include/view/: Cursor.h  DocumentView.h  Line.h  MathObjectItem.h  ParagraphLayout.h  TextEditorWidget.h  TextRunItem.h
src/controller/: DocumentController.cpp  InputController.cpp  SelectionController.cpp
src/core/: CharacterFormat.cpp  Document.cpp  Format.cpp  MathObject.cpp  Paragraph.cpp  ParagraphFormat.cpp  Run.cpp  Selection.cpp  Style.cpp  StyleManager.cpp  TextRun.cpp
src/io/: DocumentReader.cpp  DocumentWriter.cpp
src/util/: ParagraphUtils.cpp  PositionUtils.cpp
src/view/: Cursor.cpp  DocumentView.cpp  DocumentView_temp.cpp  Line.cpp  MathObjectItem.cpp  ParagraphLayout.cpp  TextEditorWidget.cpp  TextRunItem.cpp
